--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "go2index-theme-acrou",
+  "name": "go2index-theme-acroi",
   "version": "2.0.9",
   "g2index": "1.1.2",
   "scripts": {
